--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prebuild": "rm -rf dist",
     "build": "tsc -p tsconfig.build.json",
     "prepare": "husky install",
-    "start": "node dist/server.js",
+    "start": "node dist/src/server.js",
     "migration:run": "prisma migrate deploy",
     "migration:generate": "npm run dev:load-envs prisma migrate dev",
     "lint": "eslint .",
@@ -60,15 +60,15 @@
     "jest": "^26.6.3",
     "lint-staged": "^12.4.1",
     "nock": "^13.3.0",
-    "nodemon": "^2.0.16",
+    "nodemon": "^2.0.22",
     "prettier": "^2.7.1",
     "prisma": "^3.14.0",
     "supertest": "^6.2.3",
     "ts-jest": "^26.5.5",
-    "ts-node": "^10.7.0",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "3.9.0",
     "ttypescript": "^1.5.13",
-    "typescript": "^4.2.4",
+    "typescript": "^4.9.5",
     "typescript-transform-paths": "2.2.3"
   },
   "dependencies": {
